--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = my_coctail_bar
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.myCoctailBar
+PRODUCT_BUNDLE_IDENTIFIER = com.mgudalewicz.myCoctailBar
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2022 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2022 com.mgudalewicz. All rights reserved.
