--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,11 +89,11 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
+            VALUE "CompanyName", "com.mgudalewicz" "\0"
             VALUE "FileDescription", "my_coctail_bar" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "my_coctail_bar" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2022 com.example. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2022 com.mgudalewicz. All rights reserved." "\0"
             VALUE "OriginalFilename", "my_coctail_bar.exe" "\0"
             VALUE "ProductName", "my_coctail_bar" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
