--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^2.1.0
+  json_serializable: ^6.5.4
+  json_annotation: ^4.7.0
+  equatable: ^2.0.5
+  build_runner: ^2.3.2
 
 dev_dependencies:
   flutter_test:
