Create provider and service locator

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   json_annotation: ^4.7.0
   equatable: ^2.0.5
   build_runner: ^2.3.2
+  get_it: ^7.2.0
+  cloud_firestore: ^4.0.2
 
 dev_dependencies:
   flutter_test:
