--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   build_runner: ^2.3.2
   get_it: ^7.2.0
   cloud_firestore: ^4.0.2
+  fluttertoast: ^8.1.1
 
 dev_dependencies:
   flutter_test:
