--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   get_it: ^7.2.0
   cloud_firestore: ^4.0.2
   fluttertoast: ^8.1.1
+  flutter_bloc: ^8.1.1
 
 dev_dependencies:
   flutter_test:
